--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -7,11 +7,11 @@
   <title>Document</title>
 </head>
 
-<nav class="d-flex align-items-center justify-content-between">
-  <div>Ardi Azizi</div>
-  <div class="d-flex flex-row justify-content-between" style="background-color: azure; width: 100px;">
-    <div>Work</div>
-    <div>About</div>
+<nav class="d-flex align-items-center justify-content-between fs-5">
+  <a href="">Ardi Azizi</a>
+  <div class="link d-flex flex-row justify-content-between" style="width: 170px;">
+    <a href="">About</a>
+    <a href="">Work</a>
   </div>
 </nav>
 
@@ -35,8 +35,8 @@
     </div>
   </div>
 
-  <div style="width: 100%; height: 100vh;">
-    <div class="div-content d-flex flex-row align-items-center">
+  <div class="div d-flex align-items-center">
+    <div class="div-content d-flex flex-row justify-content-end">
       <div class="div-text-flip d-flex align-items-end justify-content-center flex-column gap-2">
         <h3>Windows Developer</h3>
         <h5>UI/UX Designer Developer</h5>
@@ -48,7 +48,24 @@
     </div>
   </div>
 
-  <div style="background-color: aquamarine; width: 100%; height: 100vh;">
+  <div class="div-footer d-flex align-items-center">
+    <div>
+      <h1>Thank you for viewing my portfolio!</h1>
+      <div class="d-flex flex-row gap-5">
+        <div>
+          <h3>Contact Me</h3>
+          <p>aziziardi7@gmail.com</p>
+        </div>
+        <div>
+          <h3>Let's Connect</h3>
+          <p>LinkedIn | Instagram | Resume</p>
+        </div>
+      </div>
+      <div class="div-copyright">
+        <h5>Copyright 2023</h5>
+        <p>Ardi Azizi</p>
+      </div>
+    </div>
   </div>
 </body>
 
