--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -3,6 +3,11 @@ nav {
   height: 70px;
   padding: 0 200px;
   position: absolute;
+
+  & a {
+    text-decoration: none;
+    color: black;
+  }
 }
 
 .div {
@@ -10,6 +15,8 @@ nav {
   height: 100vh;
 
   &-content {
+    width: 100%;
+    height: 100vh;
     padding: 140px 50px;
   }
 
@@ -50,5 +57,16 @@ nav {
         text-align: right;
       }
     }
+  }
+
+  &-footer {
+    width: 100%;
+    height: 100vh;
+    padding-left: 200px;
+  }
+
+  &-copyright {
+    margin-top: 200px;
+    color: lightgray;
   }
 }
