--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -42,25 +42,53 @@
     </div>
   </div>
 
-  <div class="div-other d-flex flex-column" style="background-color: antiquewhite;">
+  <div class="div-other d-flex flex-column">
     <h1>Other Projects</h1>
     <div class="row">
 
-      <div class="col mb-5">
-        Col 1
+      <div class="col left">
         <div class="box">
 
         </div>
       </div>
 
-      <div class="col mb-5 justify-content-between" style="background-color: bisque;">
-        Col 2
-        <div class="box-2">
+      <div class="col right justify-content-between">
+        <div class=" box-2">
 
         </div>
-        <div class="box-3 ">
+        <div class="box-3">
 
         </div>
+      </div>
+    </div>
+
+    <div class="row mb-5">
+      <div class="box-4">
+
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col left justify-content-between">
+        <div class=" box-2">
+
+        </div>
+        <div class="box-3">
+
+        </div>
+      </div>
+
+      <div class="col right">
+        <div class="box">
+
+        </div>
+      </div>
+    </div>
+
+    <div class="row mb-5">
+      <div class="box-4">
+
       </div>
     </div>
   </div>
