--- a/src/app/components/work/work.component.scss
+++ b/src/app/components/work/work.component.scss
@@ -46,24 +46,44 @@
 
   &-other {
     padding: 100px 200px 0 200px;
+
+    & .row {
+      padding: 0;
+
+      & .left {
+        padding-left: 0;
+      }
+
+      & .right {
+        padding-right: 0;
+      }
+    }
   }
 
 }
 
 .box {
-  width: 500px;
+  width: 100%;
   height: 500px;
   background-color: aliceblue;
 
   &-2 {
-    width: 500px;
-    height: 200px;
+    width: 100%;
+    height: 230px;
     background-color: aqua;
   }
 
   &-3 {
-    width: 500px;
-    height: 200px;
+    margin-top: 40px;
+    width: 100%;
+    height: 230px;
+    background-color: aqua;
+  }
+
+  &-4 {
+    margin-top: 40px;
+    width: 100%;
+    height: 250px;
     background-color: aqua;
   }
 }
