--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,1 +1,52 @@
+div {
+  width: 100%;
+  height: 100vh;
 
+  &.div-1 {
+    background-color: aliceblue;
+  }
+
+  &.image {
+    background-color: antiquewhite;
+    width: 150px;
+    height: 150px;
+
+    &-point {
+      background-color: antiquewhite;
+      width: 25px;
+      height: 25px;
+    }
+
+    &-2 {
+      background-color: antiquewhite;
+      width: 500px;
+      height: 500px;
+    }
+  }
+
+  &.left {
+    padding: 0 100px 0 100px;
+  }
+
+  &.right {
+    padding-right: 100px;
+  }
+}
+
+.about-text {
+  text-align: justify;
+  margin-top: 20px;
+
+  &-2 {
+    font-size: 10pt;
+  }
+
+  &-3 {
+    font-style: bold;
+    font-size: 15pt;
+  }
+}
+
+.text-point {
+  font-size: 15pt;
+}
