--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -10,26 +10,29 @@
 <nav class="d-flex align-items-center justify-content-between fs-5">
   <a href="">Ardi Azizi</a>
   <div class="link d-flex flex-row justify-content-between" style="width: 170px;">
-    <a href="">Work</a>
-    <a href="">About</a>
+    <a routerLink="/work">Work</a>
+    <a routerLink="/about">About</a>
   </div>
 </nav>
 
 <body>
-  <div class="div d-flex align-items-center justify-content-center" style="background-color: aliceblue;">
-    <div>
-      <h3>Front-end Developer - UI Designer</h3>
-    </div>
+  <div class="div home-cover d-flex align-items-center justify-content-center" style="background-color: aliceblue;">
+    <h3>Front-end Developer - UI Designer</h3>
+    <div class="overlay"></div>
+    <img src="../../../assets/bg.jpg" alt="">
   </div>
 
   <div class="div d-flex align-items-center">
     <div class="div-content d-flex flex-row">
-      <div class="div-color"></div>
-      <div class="div-cover"></div>
+      <div class="div-color-1"></div>
+      <div class="div-cover-1 d-flex align-items-center justify-content-center">
+        <img src="../../../assets/levelup_logo.png" alt="">
+      </div>
       <div class="div-text d-flex align-items-start justify-content-center flex-column gap-2">
-        <h3>Apple Developer</h3>
-        <h5>Front-end Developer</h5>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum animi deserunt quia sed provident amet!</p>
+        <h3>Telkom Digital Regional Internship</h3>
+        <h5>Fullstack Developer</h5>
+        <p>Create an application for data collection on packages that come to the office by designing both the frontend
+          and database</p>
         <button class="btn btn-primary">To Project</button>
       </div>
     </div>
