--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -82,6 +82,7 @@
         <p class="about-text-3">
           January 2021 - Present
         </p>
+        <button class="btn btn-primary">Download My Resume</button>
       </div>
 
       <div class="col right d-flex gap-3 flex-column align-items-center justify-content-center">
