--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -3,10 +3,11 @@ nav {
   height: 70px;
   padding: 0 200px;
   position: absolute;
+  z-index: 2;
 
   & a {
     text-decoration: none;
-    color: black;
+    color: white;
   }
 }
 
@@ -14,16 +15,37 @@ nav {
   width: 100%;
   height: 100vh;
 
+  &.home-cover {
+    h3 {
+      color: white;
+      position: absolute;
+      z-index: 1;
+    }
+
+    .overlay {
+      position: absolute;
+      background-color: rgba(0, 0, 0, 0.5);
+      width: 100%;
+      height: 100vh;
+    }
+
+    img {
+      width: 100%;
+      height: 100vh;
+    }
+  }
+
   &-content {
     width: 100%;
     height: 100vh;
     padding: 140px 50px;
   }
 
-  &-color {
+  &-color-1 {
+    background: rgb(54, 96, 174);
+    background: linear-gradient(180deg, rgba(54, 96, 174, 1) 0%, rgba(193, 76, 152, 1) 100%);
     width: 100px;
     height: 550px;
-    background-color: lightcyan;
     border-radius: 10px;
   }
 
@@ -40,6 +62,19 @@ nav {
       height: 550px;
       background-color: lightcyan;
       border-radius: 20px;
+    }
+
+    &-1 {
+      margin-left: 50px;
+      width: 500px;
+      height: 550px;
+      border-radius: 20px;
+      background: rgb(54, 96, 174);
+      background: linear-gradient(180deg, rgba(54, 96, 174, 1) 0%, rgba(193, 76, 152, 1) 100%);
+
+      img {
+        width: 80%;
+      }
     }
   }
 
