--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -40,14 +40,20 @@
 
   <div class="div d-flex align-items-center">
     <div class="div-content d-flex flex-row justify-content-end">
-      <div class="div-text-flip d-flex align-items-end justify-content-center flex-column gap-2">
-        <h3>Windows Developer</h3>
-        <h5>UI/UX Designer Developer</h5>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum animi deserunt quia sed provident amet!</p>
+      <div class="div-text-flip d-flex align-items-start justify-content-center flex-column gap-2">
+        <h3>BCA IT Intern</h3>
+        <h5>Frontend Developer</h5>
+        <p>Help to develop the frontend component library used by the application development inside the company</p>
         <button class="btn btn-primary">To Project</button>
       </div>
-      <div class="div-cover-flip"></div>
-      <div class="div-color"></div>
+      <div class="div-cover-flip d-flex align-items-center justify-content-center">
+        <p>
+          <b>
+            #ITBCA
+          </b>
+        </p>
+      </div>
+      <div class="div-color-2"></div>
     </div>
   </div>
 
