--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -49,6 +49,14 @@ nav {
     border-radius: 10px;
   }
 
+  &-color-2 {
+    background: rgb(20, 20, 22);
+    background: linear-gradient(180deg, rgba(20, 20, 22, 1) 0%, rgba(255, 255, 255, 1) 100%);
+    width: 100px;
+    height: 550px;
+    border-radius: 10px;
+  }
+
   &-cover {
     margin-left: 50px;
     width: 500px;
@@ -60,8 +68,13 @@ nav {
       margin-right: 50px;
       width: 500px;
       height: 550px;
-      background-color: lightcyan;
+      background-color: rgb(20, 20, 22);
       border-radius: 20px;
+
+      & p {
+        color: white;
+        font-size: 80pt;
+      }
     }
 
     &-1 {
@@ -89,7 +102,7 @@ nav {
       height: 550px;
 
       & p {
-        text-align: right;
+        text-align: left;
       }
     }
   }
