--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -4,39 +4,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Work</title>
 </head>
 
 <body>
-  <div class="div d-flex align-items-center justify-content-center">
+  <div class="div-1 d-flex align-items-center justify-content-center">
     <div class="div-content d-flex flex-row align-items-center justify-content-end">
       <div class="div-text-flip d-flex justify-content-center flex-column gap-2">
-        <h3>Project Title</h3>
-        <h5>Project Position</h5>
-        <h5>Project Duration</h5>
-        <p>Project Tools</p>
+        <h3>Room Reservation Web Application</h3>
+        <h5>Frontend Developer</h5>
+        <h5>1 Month (February 2023)</h5>
+        <p>Angular</p>
+      </div>
+      <div class="div-cover-flip d-flex justify-content-center">
+        <img src="../../../assets/Mockup/booking-app-1.png" alt="">
+      </div>
+    </div>
+  </div>
+
+  <div class="div-2 d-flex align-items-center justify-content-center">
+    <div class="div-content d-flex flex-row align-items-center justify-content-end">
+      <div class="div-text-flip d-flex justify-content-center flex-column gap-2">
+        <h3>Angular Frontend Library</h3>
+        <h5>Frontend Developer</h5>
+        <h5>1 Month</h5>
+        <p>Angular</p>
       </div>
       <div class="div-cover-flip"></div>
     </div>
   </div>
-  <div class="div d-flex align-items-center justify-content-center">
+
+  <div class="div-3 d-flex align-items-center justify-content-center">
     <div class="div-content d-flex flex-row align-items-center justify-content-end">
       <div class="div-text-flip d-flex justify-content-center flex-column gap-2">
-        <h3>Project Title</h3>
-        <h5>Project Position</h5>
-        <h5>Project Duration</h5>
-        <p>Project Tools</p>
-      </div>
-      <div class="div-cover-flip"></div>
-    </div>
-  </div>
-  <div class="div d-flex align-items-center justify-content-center">
-    <div class="div-content d-flex flex-row align-items-center justify-content-end">
-      <div class="div-text-flip d-flex justify-content-center flex-column gap-2">
-        <h3>Project Title</h3>
-        <h5>Project Position</h5>
-        <h5>Project Duration</h5>
-        <p>Project Tools</p>
+        <h3>Outsourcing Web Application</h3>
+        <h5>Laravel Developer</h5>
+        <h5>6 Month</h5>
+        <p>PHP, Laravel, MySQL</p>
       </div>
       <div class="div-cover-flip"></div>
     </div>
