--- a/src/app/components/work/work.component.scss
+++ b/src/app/components/work/work.component.scss
@@ -2,6 +2,19 @@
   width: 100%;
   height: 100vh;
 
+  &-1 {
+    background: rgb(54, 96, 174);
+    background: linear-gradient(180deg, rgba(54, 96, 174, 1) 0%, rgba(193, 76, 152, 1) 100%);
+  }
+
+  &-2 {
+    background: #2d2c2f;
+  }
+
+  &-3 {
+    background: #31517e;
+  }
+
   &-content {
     width: 100%;
     height: 100vh;
@@ -26,7 +39,6 @@
       margin-right: 50px;
       width: 500px;
       height: 550px;
-      background-color: lightcyan;
       border-radius: 20px;
     }
   }
@@ -37,10 +49,10 @@
     height: 550px;
 
     &-flip {
+      color: white;
       margin-right: 100px;
       width: 500px;
       height: 550px;
-
     }
   }
 
@@ -65,11 +77,13 @@
 .box {
   width: 100%;
   height: 500px;
+  border-radius: 20px;
   background-color: aliceblue;
 
   &-2 {
     width: 100%;
     height: 230px;
+    border-radius: 20px;
     background-color: aqua;
   }
 
@@ -77,6 +91,7 @@
     margin-top: 40px;
     width: 100%;
     height: 230px;
+    border-radius: 20px;
     background-color: aqua;
   }
 
@@ -84,6 +99,7 @@
     margin-top: 40px;
     width: 100%;
     height: 250px;
+    border-radius: 20px;
     background-color: aqua;
   }
 }
