--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -8,45 +8,80 @@
 </head>
 
 <body>
-  <div class="div-1 d-flex align-items-center justify-content-center">
+
+  <div class="section div-1 d-flex flex-column align-items-center justify-content-center">
     <div class="div-content d-flex flex-row align-items-center justify-content-end">
       <div class="div-text-flip d-flex justify-content-center flex-column gap-2">
         <h3>Room Reservation Web Application</h3>
-        <h5>Frontend Developer</h5>
-        <h5>1 Month (February 2023)</h5>
-        <p>Angular</p>
+        <div>
+          <h5>Role</h5>
+          <p>Frontend Developer</p>
+        </div>
+        <div>
+          <h5>Duration</h5>
+          <p>1 Month (February 2023)</p>
+        </div>
+        <div>
+          <h5>Tools</h5>
+          <p>Angular</p>
+        </div>
       </div>
       <div class="div-cover-flip d-flex justify-content-center">
-        <img src="../../../assets/Mockup/booking-app-1.png" alt="">
+        <img src="../../../assets/Mockup/booking-app.png" alt="">
       </div>
     </div>
+    <button class="button-view btn btn-outline-light">To Project</button>
   </div>
 
-  <div class="div-2 d-flex align-items-center justify-content-center">
+  <div class="section div-2 d-flex flex-column align-items-center justify-content-center">
     <div class="div-content d-flex flex-row align-items-center justify-content-end">
       <div class="div-text-flip d-flex justify-content-center flex-column gap-2">
         <h3>Angular Frontend Library</h3>
-        <h5>Frontend Developer</h5>
-        <h5>1 Month</h5>
-        <p>Angular</p>
+        <div>
+          <h5>Role</h5>
+          <p>Frontend Developer</p>
+        </div>
+        <div>
+          <h5>Duration</h5>
+          <p>1 Month (February 2023)</p>
+        </div>
+        <div>
+          <h5>Tools</h5>
+          <p>Angular</p>
+        </div>
       </div>
-      <div class="div-cover-flip"></div>
+      <div class="div-cover-flip d-flex justify-content-center">
+        <img src="../../../assets/Mockup/lib-front.png" alt="">
+      </div>
     </div>
+    <button class="button-view btn btn-outline-light">To Project</button>
   </div>
 
-  <div class="div-3 d-flex align-items-center justify-content-center">
+  <div class="section div-3 d-flex flex-column align-items-center justify-content-center">
     <div class="div-content d-flex flex-row align-items-center justify-content-end">
       <div class="div-text-flip d-flex justify-content-center flex-column gap-2">
         <h3>Outsourcing Web Application</h3>
-        <h5>Laravel Developer</h5>
-        <h5>6 Month</h5>
-        <p>PHP, Laravel, MySQL</p>
+        <div>
+          <h5>Role</h5>
+          <p>Laravel Developer</p>
+        </div>
+        <div>
+          <h5>Duration</h5>
+          <p>6 Month (March - August 2023)</p>
+        </div>
+        <div>
+          <h5>Tools</h5>
+          <p>PHP, Laravel, MySQL</p>
+        </div>
       </div>
-      <div class="div-cover-flip"></div>
+      <div class="div-cover-flip d-flex justify-content-center">
+        <img src="../../../assets/Mockup/upscale-clone.png" alt="">
+      </div>
     </div>
+    <button class="button-view btn btn-outline-light">To Project</button>
   </div>
 
-  <div class="div-other d-flex flex-column">
+  <div class="section div-other d-flex flex-column">
     <h1>Other Projects</h1>
     <div class="row">
 
@@ -96,6 +131,9 @@
       </div>
     </div>
   </div>
+
+  <div class="section"></div>
+
 </body>
 
 </html>
