--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -86,24 +86,28 @@
     <div class="row">
 
       <div class="col left">
-        <div class="box">
-
+        <div class="box d-flex align-items-center justify-content-center">
+          <img src="../../../assets/paket-app/paket-1.png" alt="...">
+          <div class="overlay d-flex align-items-center justify-content-center">Packet Tracker App</div>
         </div>
       </div>
 
-      <div class="col right justify-content-between">
+      <div class=" col right justify-content-between">
         <div class=" box-2">
-
+          <img src="../../../assets/Mockup/booking-app.png" alt="...">
+          <div class="overlay d-flex align-items-center justify-content-center">Sistem Nomor Surat App</div>
         </div>
         <div class="box-3">
-
+          <img src="../../../assets/old-project/calcJS.png" alt="...">
+          <div class="overlay d-flex align-items-center justify-content-center">Calculator JS</div>
         </div>
       </div>
     </div>
 
     <div class="row mb-5">
       <div class="box-4">
-
+        <img src="../../../assets/old-project/todolistJS.png" alt="...">
+        <div class="overlay d-flex align-items-center justify-content-center">To-do-list App</div>
       </div>
     </div>
 
@@ -111,16 +115,17 @@
 
       <div class="col left justify-content-between">
         <div class=" box-2">
-
+          <img src="../../../assets/old-project/digiclockJS.png" alt="...">
+          <div class="overlay d-flex align-items-center justify-content-center">Digi-Clock JS App</div>
         </div>
         <div class="box-3">
-
         </div>
       </div>
 
       <div class="col right">
-        <div class="box">
-
+        <div class="box d-flex align-items-center justify-content-center">
+          <img src="../../../assets/old-project/crud.png" alt="...">
+          <div class="overlay d-flex align-items-center justify-content-center">CRUD Example App</div>
         </div>
       </div>
     </div>
