--- a/src/app/components/work/work.component.scss
+++ b/src/app/components/work/work.component.scss
@@ -5,7 +5,6 @@ html {
 }
 
 .section {
-  transition: 0.5s;
   scroll-snap-align: start;
 }
 
@@ -96,13 +95,79 @@ html {
   width: 100%;
   height: 500px;
   border-radius: 20px;
-  background-color: aliceblue;
+  padding: 20px;
+  position: relative;
+
+  &:hover {
+    cursor: pointer;
+
+    & .overlay {
+      opacity: 1;
+    }
+  }
+
+  & img {
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .overlay {
+    border-radius: 20px;
+    position: absolute;
+    bottom: 0;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.7);
+    color: #f1f1f1;
+    width: 100%;
+    height: 100%;
+    transition: .5s ease;
+    opacity: 0;
+    color: white;
+    font-size: 30px;
+    font-style: bold;
+    padding: 20px;
+    text-align: center;
+  }
 
   &-2 {
     width: 100%;
     height: 230px;
     border-radius: 20px;
-    background-color: aqua;
+    position: relative;
+
+    &:hover {
+      cursor: pointer;
+
+      & .overlay {
+        opacity: 1;
+      }
+    }
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 20px;
+    }
+
+    .overlay {
+      border-radius: 20px;
+      position: absolute;
+      bottom: 0;
+      background: rgb(0, 0, 0);
+      background: rgba(0, 0, 0, 0.5);
+      color: #f1f1f1;
+      width: 100%;
+      height: 100%;
+      transition: .5s ease;
+      opacity: 0;
+      color: white;
+      font-size: 30px;
+      font-style: bold;
+      padding: 20px;
+      text-align: center;
+    }
+
   }
 
   &-3 {
@@ -110,7 +175,41 @@ html {
     width: 100%;
     height: 230px;
     border-radius: 20px;
-    background-color: aqua;
+    position: relative;
+
+    &:hover {
+      cursor: pointer;
+
+      & .overlay {
+        opacity: 1;
+      }
+    }
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: fill;
+      border-radius: 20px;
+    }
+
+    .overlay {
+      border-radius: 20px;
+      position: absolute;
+      bottom: 0;
+      background: rgb(0, 0, 0);
+      background: rgba(0, 0, 0, 0.7);
+      color: #f1f1f1;
+      width: 100%;
+      height: 100%;
+      transition: .5s ease;
+      opacity: 0;
+      color: white;
+      font-size: 30px;
+      font-style: bold;
+      padding: 20px;
+      text-align: center;
+    }
+
   }
 
   &-4 {
@@ -118,6 +217,39 @@ html {
     width: 100%;
     height: 250px;
     border-radius: 20px;
-    background-color: aqua;
+    position: relative;
+    padding: 0;
+
+    &:hover {
+      cursor: pointer;
+
+      & .overlay {
+        opacity: 1;
+      }
+    }
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 20px;
+    }
+
+    .overlay {
+      border-radius: 20px;
+      position: absolute;
+      bottom: 0;
+      background: rgb(0, 0, 0);
+      background: rgba(0, 0, 0, 0.5);
+      color: #f1f1f1;
+      width: 100%;
+      height: 100%;
+      transition: .5s ease;
+      opacity: 0;
+      color: white;
+      font-size: 20px;
+      padding: 20px;
+      text-align: center;
+    }
   }
 }
