Update in work and homepage page

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -57,6 +57,21 @@
     </div>
   </div>
 
+  <div class="div d-flex align-items-center">
+    <div class="div-content d-flex flex-row">
+      <div class="div-color-3"></div>
+      <div class="div-cover-3 d-flex align-items-center justify-content-center">
+        <img src="../../../assets/levelup_logo.png" alt="">
+      </div>
+      <div class="div-text d-flex align-items-start justify-content-center flex-column gap-2">
+        <h3>Programmer Intern</h3>
+        <h5>Laravel Developer</h5>
+        <p>Debugging and develop the outsourcing website owned by the company</p>
+        <button class="btn btn-primary">To Project</button>
+      </div>
+    </div>
+  </div>
+
   <div class="div-footer d-flex align-items-center">
     <div>
       <h1>Thank you for viewing my portfolio!</h1>
