--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -7,6 +7,14 @@
   <title>Work</title>
 </head>
 
+<nav class="d-flex align-items-center justify-content-between fs-5">
+  <a href="">Ardi Azizi</a>
+  <div class="link d-flex flex-row justify-content-between" style="width: 170px;">
+    <a routerLink="/work">Work</a>
+    <a routerLink="/about">About</a>
+  </div>
+</nav>
+
 <body>
 
   <div class="section div-1 d-flex flex-column align-items-center justify-content-center">
@@ -94,7 +102,7 @@
 
       <div class=" col right justify-content-between">
         <div class=" box-2">
-          <img src="../../../assets/Mockup/booking-app.png" alt="...">
+          <img src="../../../assets/no-surat-app/no-surat-1.png" alt="...">
           <div class="overlay d-flex align-items-center justify-content-center">Sistem Nomor Surat App</div>
         </div>
         <div class="box-3">
@@ -119,6 +127,8 @@
           <div class="overlay d-flex align-items-center justify-content-center">Digi-Clock JS App</div>
         </div>
         <div class="box-3">
+          <img src="../../../assets/old-project/porto1.png" alt="...">
+          <div class="overlay d-flex align-items-center justify-content-center">Portfolio Web</div>
         </div>
       </div>
 
@@ -132,7 +142,6 @@
 
     <div class="row mb-5">
       <div class="box-4">
-
       </div>
     </div>
   </div>
