--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -56,6 +56,13 @@ nav {
     border-radius: 10px;
   }
 
+  &-color-3 {
+    background: #31517e;
+    width: 100px;
+    height: 550px;
+    border-radius: 10px;
+  }
+
   &-cover {
     margin-left: 50px;
     width: 500px;
@@ -83,6 +90,18 @@ nav {
       border-radius: 20px;
       background: rgb(54, 96, 174);
       background: linear-gradient(180deg, rgba(54, 96, 174, 1) 0%, rgba(193, 76, 152, 1) 100%);
+
+      img {
+        width: 80%;
+      }
+    }
+
+    &-3 {
+      margin-left: 50px;
+      width: 500px;
+      height: 550px;
+      border-radius: 20px;
+      background: #31517e;
 
       img {
         width: 80%;
