--- a/src/app/components/work/work.component.scss
+++ b/src/app/components/work/work.component.scss
@@ -4,6 +4,19 @@ html {
   height: 100vh;
 }
 
+nav {
+  width: 100%;
+  height: 70px;
+  padding: 0 200px;
+  position: absolute;
+  z-index: 2;
+
+  & a {
+    text-decoration: none;
+    color: white;
+  }
+}
+
 .section {
   scroll-snap-align: start;
 }
@@ -146,7 +159,7 @@ html {
     & img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: fill;
       border-radius: 20px;
     }
 
@@ -155,7 +168,7 @@ html {
       position: absolute;
       bottom: 0;
       background: rgb(0, 0, 0);
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.7);
       color: #f1f1f1;
       width: 100%;
       height: 100%;
@@ -240,14 +253,15 @@ html {
       position: absolute;
       bottom: 0;
       background: rgb(0, 0, 0);
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.7);
       color: #f1f1f1;
       width: 100%;
       height: 100%;
       transition: .5s ease;
       opacity: 0;
       color: white;
-      font-size: 20px;
+      font-size: 30px;
+      font-style: bold;
       padding: 20px;
       text-align: center;
     }
