Update the about page

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -7,25 +7,29 @@
   <title>Document</title>
 </head>
 
+<app-navbar></app-navbar>
+
 <body>
   <div class="div-1">
     <div class="row">
       <div class="col left d-flex gap-3 flex-column align-items-start justify-content-center">
-        <div class="image"></div>
-        <h2>Ardi Azizi</h2>
-        <p class="about-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt maxime laudantium
-          repellendus
-          necessitatibus. Iusto ex modi, omnis exercitationem dolorum nesciunt aut. Unde quisquam temporibus
-          reprehenderit eligendi fugit voluptatibus voluptate consectetur qui? Quia tenetur nulla quaerat similique,
-          rem
-          quam quibusdam eveniet molestias numquam, ut sed ipsa praesentium ullam. Sit, a deleniti?</p>
+        <div class="image">
+          <img src="../../../assets/bg.jpg" alt="">
+        </div>
+        <h2>Hi! I'm Ardi Azizi!</h2>
+        <p class="about-text">
+          Learner and enthusiast of the world of technology. Hard worker and responsibility. Believe that everything can
+          be developed. Searching for a job in the technology field to grow myself and also my work place.
+        </p>
       </div>
 
       <div class="col right d-flex gap-2 flex-column align-items-start justify-content-center">
         <h2>Point of Me</h2>
         <span class="d-flex flex-row gap-3">
-          <div class="image-point"></div>
-          <h3 class="text-point">Point 1</h3>
+          <div class="image-point">
+            <h3 class="bi bi-book"></h3>
+          </div>
+          <h3 class="text-point">Never Stop Learner</h3>
         </span>
         <p class="about-text-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo debitis incidunt aliquid
           quia neque
@@ -34,8 +38,10 @@
           quos consequatur reprehenderit.
         </p>
         <span class="d-flex flex-row gap-3">
-          <div class="image-point"></div>
-          <h3 class="text-point">Point 2</h3>
+          <div class="image-point">
+            <h3 class="bi bi-search"></h3>
+          </div>
+          <h3 class="text-point">Detail Oriented</h3>
         </span>
         <p class="about-text-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo debitis incidunt aliquid
           quia neque
@@ -44,8 +50,10 @@
           quos consequatur reprehenderit.
         </p>
         <span class="d-flex flex-row gap-3">
-          <div class="image-point"></div>
-          <h3 class="text-point">Point 3</h3>
+          <div class="image-point">
+            <h3 class="bi bi-kanban"></h3>
+          </div>
+          <h3 class="text-point">Always Manage all Work</h3>
         </span>
         <p class="about-text-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo debitis incidunt aliquid
           quia neque
@@ -62,31 +70,57 @@
       <div class="col left d-flex gap-3 flex-column align-items-start justify-content-center">
         <h2>Experience</h2>
         <span class="d-flex flex-row gap-3">
-          <div class="image-point"></div>
-          <h3 class="text-point">Experience 1</h3>
+          <div class="image-point">
+            <h3 class="bi bi-stack"></h3>
+          </div>
+          <h3 class="text-point">Fullstack Developer Intern @ Telkom Indonesia Reg-IV</h3>
         </span>
         <p class="about-text-3">
-          January 2021 - Present
+          July 2022 - October 2022
         </p>
         <span class="d-flex flex-row gap-3">
-          <div class="image-point"></div>
-          <h3 class="text-point">Experience 2</h3>
+          <div class="image-point">
+            <h3 class="bi bi-stack"></h3>
+          </div>
+          <h3 class="text-point">Fullstack Developer Freelance @ Telkom Indonesia Reg-IV</h3>
         </span>
         <p class="about-text-3">
-          January 2021 - Present
+          December 2022
         </p>
         <span class="d-flex flex-row gap-3">
-          <div class="image-point"></div>
-          <h3 class="text-point">Experience 3</h3>
+          <div class="image-point">
+            <h3 class="bi bi-front"></h3>
+          </div>
+          <h3 class="text-point">Frontend Developer Freelance @ Telkom Indonesia Reg-IV</h3>
         </span>
         <p class="about-text-3">
-          January 2021 - Present
+          February 2023
+        </p>
+        <span class="d-flex flex-row gap-3">
+          <div class="image-point">
+            <h3 class="bi bi-front"></h3>
+          </div>
+          <h3 class="text-point">Frontend Developer Intern @ Bank Central Asia</h3>
+        </span>
+        <p class="about-text-3">
+          October 2022 - January 2023
+        </p>
+        <span class="d-flex flex-row gap-3">
+          <div class="image-point">
+            <h3 class="bi bi-stack"></h3>
+          </div>
+          <h3 class="text-point">Laravel Developer Intern @ PT. Talenta Sinergi Group</h3>
+        </span>
+        <p class="about-text-3">
+          March 2023 - August 2023
         </p>
         <button class="btn btn-primary">Download My Resume</button>
       </div>
 
       <div class="col right d-flex gap-3 flex-column align-items-center justify-content-center">
-        <div class="image-2"></div>
+        <div class="image-2">
+          <img src="../../../assets/bg.jpg" alt="">
+        </div>
       </div>
     </div>
   </div>
