--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -7,13 +7,7 @@
   <title>Document</title>
 </head>
 
-<nav class="d-flex align-items-center justify-content-between fs-5">
-  <a href="">Ardi Azizi</a>
-  <div class="link d-flex flex-row justify-content-between" style="width: 170px;">
-    <a routerLink="/work">Work</a>
-    <a routerLink="/about">About</a>
-  </div>
-</nav>
+<app-navbar></app-navbar>
 
 <body>
   <div class="div home-cover d-flex align-items-center justify-content-center" style="background-color: aliceblue;">
@@ -61,7 +55,7 @@
     <div class="div-content d-flex flex-row">
       <div class="div-color-3"></div>
       <div class="div-cover-3 d-flex align-items-center justify-content-center">
-        <img src="../../../assets/levelup_logo.png" alt="">
+        <img src="../../../assets/upscale_logo.png" alt="">
       </div>
       <div class="div-text d-flex align-items-start justify-content-center flex-column gap-2">
         <h3>Programmer Intern</h3>
