--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -7,13 +7,7 @@
   <title>Work</title>
 </head>
 
-<nav class="d-flex align-items-center justify-content-between fs-5">
-  <a href="">Ardi Azizi</a>
-  <div class="link d-flex flex-row justify-content-between" style="width: 170px;">
-    <a routerLink="/work">Work</a>
-    <a routerLink="/about">About</a>
-  </div>
-</nav>
+<app-navbar></app-navbar>
 
 <body>
 
@@ -140,13 +134,13 @@
       </div>
     </div>
 
-    <div class="row mb-5">
+    <!-- <div class="row mb-5">
       <div class="box-4">
       </div>
-    </div>
+    </div> -->
   </div>
 
-  <div class="section"></div>
+  <div class="section mb-5"></div>
 
 </body>
 
