Update and modify the navbar

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 
-<app-navbar></app-navbar>
+<app-navbar textColor="black"></app-navbar>
 
 <body>
   <div class="div-1">
