--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -7,7 +7,7 @@
   <title>Work</title>
 </head>
 
-<app-navbar></app-navbar>
+<app-navbar [textColor]=navTextColor></app-navbar>
 
 <body>
 
@@ -83,7 +83,7 @@
     <button class="button-view btn btn-outline-light">To Project</button>
   </div>
 
-  <div class="section div-other d-flex flex-column">
+  <div id="other" class="section div-other d-flex flex-column">
     <h1>Other Projects</h1>
     <div class="row">
 
@@ -140,7 +140,7 @@
     </div> -->
   </div>
 
-  <div class="section mb-5"></div>
+  <div id="other" class="section mb-5"></div>
 
 </body>
 
