--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="d-flex align-items-center justify-content-between fs-5">
-  <a href="">Ardi Azizi</a>
+  <a href="" [ngStyle]="{'color': textColor}">Ardi Azizi</a>
   <div class="link d-flex flex-row justify-content-between" style="width: 170px;">
-    <a routerLink="/work">Work</a>
-    <a routerLink="/about">About</a>
+    <a routerLink="/work" [ngStyle]="{'color': textColor}">Work</a>
+    <a routerLink="/about" [ngStyle]="{'color': textColor}">About</a>
   </div>
 </nav>
