Add surat-app project page

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -27,7 +27,7 @@
         <h5>Fullstack Developer</h5>
         <p>Create an application for data collection on packages that come to the office by designing both the frontend
           and database</p>
-        <button class="btn btn-primary">To Project</button>
+        <button class="btn btn-primary" [routerLink]="['/project', 1]">To Project</button>
       </div>
     </div>
   </div>
