--- a/src/app/components/project/project.component.scss
+++ b/src/app/components/project/project.component.scss
@@ -1,5 +1,4 @@
 div {
-  background-color: aliceblue;
   width: 100%;
   height: 100vh;
 
@@ -11,7 +10,6 @@ div {
       margin: 0;
 
       & .col {
-        background-color: antiquewhite;
         width: 100%;
         height: 70vh;
         padding: 0;
@@ -26,6 +24,10 @@ div {
 
   &.project {
     gap: 300px;
+
+    & img {
+      width: 100%;
+    }
   }
 
   &.mockup {
@@ -47,7 +49,7 @@ div {
   }
 
   &.result {
-    padding: 100px 0 100px 200px;
+    padding: 100px 0 100px 235px;
   }
 
 
