--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -19,42 +19,54 @@
     </div>
   </div>
 
-  <div class="small">
-    <div class="row">
-      <div class="col d-flex flex-row align-items-center justify-content-center">
-        <h3>
-          Project Description
-        </h3>
-      </div>
-      <div class="col desc d-flex flex-row align-items-center justify-content-center">
-        {{ projectDescription }}
+  <div>
+    <div class="small">
+      <div class="row">
+        <div class="col d-flex flex-row align-items-center justify-content-center">
+          <h3>
+            Project Description
+          </h3>
+        </div>
+        <div class="col desc d-flex flex-row align-items-center justify-content-center">
+          {{ projectDescription }}
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="mockup d-flex flex-row align-items-center justify-content-center">
-    <div class="box"></div>
-    <div class="box"></div>
-  </div>
-
-  <div class="small">
-    <div class="row">
-      <div class="col d-flex flex-row align-items-center justify-content-center">
-        <h3>
-          Project Technology
-        </h3>
-      </div>
-      <div class="col desc d-flex flex-row align-items-center justify-content-center">
-        <div class="box-small"></div>
-        <div class="box-small"></div>
-        <div class="box-small"></div>
+    <div class="small">
+      <div class="row">
+        <div class="col d-flex flex-row align-items-center justify-content-center">
+          <h3>
+            Project Technology
+          </h3>
+        </div>
+        <div class="col desc-tech d-flex flex-row align-items-center justify-content-start">
+          <div class="box-small d-flex align-items-center justify-content-center">
+            <img [src]="projectTechLogo1" alt="" srcset="">
+          </div>
+          <div class="box-small d-flex align-items-center justify-content-center">
+            <img [src]="projectTechLogo2" alt="" srcset="">
+          </div>
+          <div class="box-small d-flex align-items-center justify-content-center">
+            <img [src]="projectTechLogo3" alt="" srcset="">
+          </div>
+          <div class="box-small d-flex align-items-center justify-content-center">
+            <img [src]="projectTechLogo4" alt="" srcset="">
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
   <div class="result">
     <h3>Project Result</h3>
+    <div class="result-img d-flex flex-row gap-5">
+      <img src="../../../assets/bg.jpg" alt="">
+      <img src="../../../assets/bg.jpg" alt="">
+      <img src="../../../assets/bg.jpg" alt="">
+    </div>
   </div>
+
 </body>
 
 </html>
