--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="div home-cover d-flex align-items-center justify-content-center" style="background-color: aliceblue;">
-    <h3>Front-end Developer - UI Designer</h3>
+    <h3>Front-end Developer</h3>
     <div class="overlay"></div>
     <img src="../../../assets/bg.jpg" alt="">
   </div>
@@ -20,7 +20,7 @@
     <div class="div-content d-flex flex-row">
       <div class="div-color-1"></div>
       <div class="div-cover-1 d-flex align-items-center justify-content-center">
-        <img src="../../../assets/levelup_logo.png" alt="">
+        <img src="../../../assets/logo/levelup_logo.png" alt="">
       </div>
       <div class="div-text d-flex align-items-start justify-content-center flex-column gap-2">
         <h3>Telkom Digital Regional Internship</h3>
@@ -38,7 +38,7 @@
         <h3>BCA IT Intern</h3>
         <h5>Frontend Developer</h5>
         <p>Help to develop the frontend component library used by the application development inside the company</p>
-        <button class="btn btn-primary">To Project</button>
+        <button class="btn btn-primary" [routerLink]="['/project', 2]">To Project</button>
       </div>
       <div class="div-cover-flip d-flex align-items-center justify-content-center">
         <p>
@@ -55,13 +55,13 @@
     <div class="div-content d-flex flex-row">
       <div class="div-color-3"></div>
       <div class="div-cover-3 d-flex align-items-center justify-content-center">
-        <img src="../../../assets/upscale_logo.png" alt="">
+        <img src="../../../assets/logo/upscale_logo.png" alt="">
       </div>
       <div class="div-text d-flex align-items-start justify-content-center flex-column gap-2">
         <h3>Programmer Intern</h3>
         <h5>Laravel Developer</h5>
         <p>Debugging and develop the outsourcing website owned by the company</p>
-        <button class="btn btn-primary">To Project</button>
+        <button class="btn btn-primary" [routerLink]="['/project', 3]">To Project</button>
       </div>
     </div>
   </div>
