Fixing the scroll snap, add navbar behaviour and add link to portfolio

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -13,9 +13,9 @@
   <div class="div-1">
     <div class="row">
       <div class="col left d-flex gap-3 flex-column align-items-start justify-content-center">
-        <div class="image">
+        <!-- <div class="image">
           <img src="../../../assets/bg.jpg" alt="">
-        </div>
+        </div> -->
         <h2>Hi! I'm Ardi Azizi!</h2>
         <p class="about-text">
           Learner and enthusiast of the world of technology. Hard worker and responsibility. Believe that everything can
@@ -114,7 +114,9 @@
         <p class="about-text-3">
           March 2023 - August 2023
         </p>
-        <button class="btn btn-primary">Download My Resume</button>
+        <a class="btn btn-primary"
+          href="https://docs.google.com/document/d/1iDsEPli5rWn5UDKiLmAdSU-FTdXV_pGtijdDzTUtNA0/edit?usp=sharing">Download
+          My Resume</a>
       </div>
 
       <div class="col right d-flex gap-3 flex-column align-items-center justify-content-center">
