--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -1,8 +1,21 @@
+html {
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  height: 100vh;
+}
+
+.section {
+  scroll-snap-align: start;
+}
+
 .div {
   width: 100%;
   height: 100vh;
 
   &.home-cover {
+    height: 101vh;
+    position: relative;
+
     h3 {
       color: white;
       position: absolute;
@@ -13,12 +26,12 @@
       position: absolute;
       background-color: rgba(0, 0, 0, 0.5);
       width: 100%;
-      height: 100vh;
+      height: 101vh;
     }
 
     img {
       width: 100%;
-      height: 100vh;
+      height: 101vh;
     }
   }
 
@@ -115,6 +128,19 @@
     width: 100%;
     height: 100vh;
     padding-left: 200px;
+    scroll-snap-align: start;
+
+    & .mail {
+      color: black;
+      text-decoration: none;
+    }
+
+    & .connect {
+      a {
+        color: black;
+        text-decoration: none;
+      }
+    }
   }
 
   &-copyright {
