Add docs folder for production

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -77,7 +77,7 @@
         <div>
           <h3>Let's Connect</h3>
           <span class="connect">
-            <a href="linkedin.com/in/lazuardi-muhammad-azizi-56971b234">LinkedIn </a>
+            <a href="https://linkedin.com/in/lazuardi-muhammad-azizi-56971b234">LinkedIn </a>
             <a>|</a>
             <a href="https://docs.google.com/document/d/1iDsEPli5rWn5UDKiLmAdSU-FTdXV_pGtijdDzTUtNA0/edit?usp=sharing">
               Resume</a>
