--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -25,14 +25,14 @@
         </div>
         <div>
           <h5>Tools</h5>
-          <p>Angular</p>
+          <p>Angular, Typescript, Gitlab, Bash</p>
         </div>
       </div>
       <div class="div-cover-flip d-flex justify-content-center">
         <img src="../../../assets/Mockup/booking-app.png" alt="">
       </div>
     </div>
-    <button class="button-view btn btn-outline-light">To Project</button>
+    <a class="button-view btn btn-outline-light" [routerLink]="['/project', 4]">To Project</a>
   </div>
 
   <div class="section div-2 d-flex flex-column align-items-center justify-content-center">
@@ -49,14 +49,14 @@
         </div>
         <div>
           <h5>Tools</h5>
-          <p>Angular</p>
+          <p>Angular, Typescript, Gitlab</p>
         </div>
       </div>
       <div class="div-cover-flip d-flex justify-content-center">
         <img src="../../../assets/Mockup/lib-front.png" alt="">
       </div>
     </div>
-    <button class="button-view btn btn-outline-light">To Project</button>
+    <a class="button-view btn btn-outline-light" [routerLink]="['/project', 2]">To Project</a>
   </div>
 
   <div class="section div-3 d-flex flex-column align-items-center justify-content-center">
@@ -73,14 +73,14 @@
         </div>
         <div>
           <h5>Tools</h5>
-          <p>PHP, Laravel, MySQL</p>
+          <p>PHP, Laravel, MySQL, Gitlab</p>
         </div>
       </div>
       <div class="div-cover-flip d-flex justify-content-center">
         <img src="../../../assets/Mockup/upscale-clone.png" alt="">
       </div>
     </div>
-    <button class="button-view btn btn-outline-light">To Project</button>
+    <a class="button-view btn btn-outline-light" [routerLink]="['/project', 3]">To Project</a>
   </div>
 
   <div id="other" class="section div-other d-flex flex-column">
